<resources>
    <string name="retry_btn">Retry</string>
    <string name="error_no_internet">No internet connection. Make sure Wi-Fi or cellular data is turned on,
        then try again.</string>
    <string name="error_load_data">An error occurred while trying to fetch data!</string>
    <string name="error_not_logged_in">You are not logged into TMDb. Please log in to access this feature.</string>
    <string name="menu_your_lists">Your Lists</string>
    <string name="title_movies">Movies</string>
    <string name="no_movies_available">No Movies Available</string>
    <string name="now_playing_txt">Now Playing</string>
    <string name="popular_txt">Popular</string>
    <string name="top_rated_txt">Top Rated</string>
    <string name="upcoming_txt">Upcoming</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="no_tv_shows_available">No TV Shows Available</string>
    <string name="on_air_txt">On Air</string>
    <string name="airing_today_txt">Airing Today</string>
    <string name="title_people">People</string>
    <string name="no_people_available">No People Available</string>
    <string name="overview_title">Overview:</string>
    <string name="awards_title">Awards:</string>
    <string name="rated_title">Rated:</string>
    <string name="production_title">Production:</string>
    <string name="country_title">Country:</string>
    <string name="language_title">Language:</string>
    <string name="images_title">Images</string>
    <string name="videos_title">Videos</string>
    <string name="cast_credits_title">Cast Credits</string>
    <string name="crew_credits_title">Crew Credits</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="view_in_imdb">View in IMDb</string>
    <string name="view_in_rotten_tomatoes">View in Rotten Tomatoes</string>
    <string name="genre_title">Genres:</string>
    <string name="runtime_title">Runtime:</string>
    <string name="status_title">Status:</string>
    <string name="budget_title">Budget:</string>
    <string name="revenue_title">Revenue:</string>
    <string name="tagline_title">Tagline:</string>
    <string name="release_date_title">Release Date:</string>
    <string name="similar_movies_title">Similar Movies</string>
    <string name="error_load_movie_detail">An error occurred while trying to load movie detail</string>
    <string name="seasons_title">Seasons</string>
    <string name="seasons_count_title">Seasons:</string>
    <string name="network_title">Network:</string>
    <string name="episodes_title">Episodes:</string>
    <string name="first_air_date_title">First Air Date:</string>
    <string name="last_air_date_title">Last Air Date:</string>
    <string name="similar_tv_shows_title">Simiilar Television Shows</string>
    <string name="error_load_tv_detail">An error occurred while trying to load tv show detail</string>
    <string name="season_specials">Specials</string>
    <string name="season_title">Season:</string>
    <string name="air_date_title">Air Date:</string>
    <string name="season_number_format">Season %d</string>
    <string name="episode_count_format">%d Episodes</string>
    <string name="episode_number_format">Episode %d</string>
    <string name="error_load_season_detail">An error occurred while trying to load season detail</string>
    <string name="episode_title">Episode:</string>
    <string name="error_load_episode_detail">An error occurred while trying to load episode detail</string>
    <string name="biography_title">Biography:</string>
    <string name="birthday_title">Birthday:</string>
    <string name="place_of_birth_title">Place Of Birth:</string>
    <string name="deathday_title">Died On:</string>
    <string name="also_known_as_title">Also known as:</string>
    <string name="error_load_person_detail">An error occurred while trying to load person detail</string>
    <string name="menu_search">Search</string>
    <string name="hint_search">Search Movie, TV Show or Person</string>
    <string name="no_results_available">No Results Available</string>
    <string name="title_discover">Discover</string>
    <string name="menu_filter">Filter</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_sci_fi">Sci-Fi</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_action_id">28</string>
    <string name="genre_adventure_id">12</string>
    <string name="genre_animation_id">16</string>
    <string name="genre_comedy_id">35</string>
    <string name="genre_crime_id">80</string>
    <string name="genre_documentary_id">99</string>
    <string name="genre_drama_id">18</string>
    <string name="genre_family_id">10751</string>
    <string name="genre_fantasy_id">14</string>
    <string name="genre_history_id">36</string>
    <string name="genre_horror_id">27</string>
    <string name="genre_music_id">10402</string>
    <string name="genre_mystery_id">9648</string>
    <string name="genre_romance_id">10749</string>
    <string name="genre_sci_fi_id">878</string>
    <string name="genre_thriller_id">53</string>
    <string name="genre_war_id">10752</string>
    <string name="genre_western_id">37</string>
    <string name="genre_action_adventure">Action &amp; Adventure</string>
    <string name="genre_scifi_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="genre_reality">Reality</string>
    <string name="genre_war_politics">War &amp; Politics</string>
    <string name="genre_action_adventure_id">10759</string>
    <string name="genre_scifi_fantasy_id">10765</string>
    <string name="genre_reality_id">10764</string>
    <string name="genre_war_politics_id">10768</string>
    <string name="metascore_txt">Metascore</string>
    <string name="meter_count_format" formatted="false">%s %%</string>
    <string name="sort_by_txt">Sort By</string>
    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_avg_vote">Avg. Votes</string>
    <string name="choose_date_txt">Choose Filter Date</string>
    <string name="start_date_txt">Start Date</string>
    <string name="end_date_txt">End Date</string>
    <string name="select_genre_txt">Select Genres</string>
    <string name="apply_filter_btn">Apply Filter</string>
    <string name="error_choose_valid_date">Please choose valid date</string>
    <string name="login_btn">Login</string>
    <string name="title_tmdb_login">TMDb Login</string>
    <string name="content_tmdb_login">Do you want to login with your TMDb account?</string>
    <string name="logging_in">Logging into TMDb account…</string>
    <string name="error_tmdb_login">Failed to login</string>
    <string name="success_tmdb_login">Successfully logged in as %s!</string>
    <string name="login_with_tmdb">Login with TMDb</string>
    <string name="creating_session">Creating user session…</string>
    <string name="title_log_out">Log Out</string>
    <string name="content_log_out">Are you sure you want to log out from currently logged in account?</string>
    <string name="title_favorites">Favorites</string>
    <string name="error_mark_favorite">Failed to change favorite status</string>
    <string name="no_fav_movies_available">Your favorite movies appear here</string>
    <string name="no_fav_tv_shows_available">Your favorite TV shows appear here</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="no_movies_watchlist_available">Your movies watchlist appear here</string>
    <string name="no_tv_shows_watchlist_available">Your TV shows watchlist appear here</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="success_add_to_watchlist">Successfully added to watchlist</string>
    <string name="error_add_to_watchlist">Failed to add to watchlist</string>
    <string name="success_remove_watchlist">Successfully removed from watchlist</string>
    <string name="error_remove_watchlist">Failed to remove from watchlist</string>
    <string name="rate_btn">Rate</string>
    <string name="remove_btn">Remove</string>
    <string name="success_save_rating">Your rating has been saved successfully</string>
    <string name="error_save_rating">Failed to save your rating</string>
    <string name="success_delete_rating">Your rating has been deleted successfully</string>
    <string name="error_delete_rating">Failed to delete rating</string>
    <string name="title_rated">Rated</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_rate_movie">Rate this movie</string>
    <string name="title_rate_tv_show">Rate this TV show</string>
    <string name="title_rate_episode">Rate this episode</string>
    <string name="no_rated_movies_available">Your rated movies appear here</string>
    <string name="no_rated_tv_shows_available">Your rated TV shows appear here</string>
    <string name="no_rated_episodes_available">Your rated episodes appear here</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="title_movie_reviews">Movie Reviews</string>
    <string name="no_reviews_available">No Reviews Available</string>
    <string name="menu_share">Share</string>
    <string name="connect_to_trakt">Connect to Trakt</string>
    <string name="trakt_logging_in">Connected to Trakt. Just a moment…</string>
    <string name="success_trakt_login">Successfully connected to your Trakt account</string>
    <string name="error_trakt_login">Something went wrong. Check your Trakt credentials and try again.</string>
    <string name="connect_to_trakt_desc">Connect Movie Guide to Trakt to keep track of TV shows and movies you watch.</string>
    <string name="join_trakt_desc">Don\'t have Trakt account?\nJust tap on connect button and join Trakt!</string>
    <string name="title_profile">Profile</string>
    <string name="joined_on_format">Joined Trakt On: %s</string>
    <string name="friend_count">%d Friend</string>
    <string name="friends_count">%d Friends</string>
    <string name="follower_count">%d Follower</string>
    <string name="followers_count">%d Followers</string>
    <string name="following_count">%d Following</string>
    <string name="followings_count">%d Followings</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="watched_episodes">Watched Episodes</string>
    <string name="time_spent">Time Spent</string>
    <string name="time_spent_days">Days</string>
    <string name="time_spent_hours">Hours</string>
    <string name="time_spent_minutes">Minutes</string>
    <string name="star_count">%d star</string>
    <string name="ratings_distribution">Ratings Distribution</string>
    <string name="error_retrieving_stats">An error occurred while trying to retrieve your stats</string>
</resources>