<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_movies"
            android:checked="true"
            android:icon="@drawable/ic_movie_white_24dp"
            android:title="@string/title_movies"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_tv_shows"
            android:icon="@drawable/ic_tv_white_24dp"
            android:title="@string/title_tv_shows"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_people"
            android:icon="@drawable/ic_people_white_24dp"
            android:title="@string/title_people"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_discover"
            android:icon="@drawable/ic_discover_white_24dp"
            android:title="@string/title_discover"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_favorites"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/title_favorites"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_watchlist"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/title_watchlist"
            app:showAsAction="ifRoom" />
    </group>
</menu>