<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/mark_as_favorite"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_watchlist"
        android:icon="@drawable/ic_watchlist_white_24dp"
        android:title="@string/add_to_watchlist"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_imdb"
        android:title="@string/view_in_imdb"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rotten_tomatoes"
        android:title="@string/view_in_rotten_tomatoes"
        android:visible="false"
        app:showAsAction="never" />
</menu>