<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_movies"
        android:enabled="true"
        android:icon="@drawable/ic_movies_white_24dp"
        android:title="@string/title_movies"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tv_shows"
        android:enabled="true"
        android:icon="@drawable/ic_tv_shows_white_24dp"
        android:title="@string/title_tv_shows"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/title_people"
        app:showAsAction="ifRoom" />
</menu>