<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    style="@style/Match"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_detail_app_bar" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        style="@style/DetailNestedScrollView">

        <FrameLayout style="@style/Match.Width">

            <include layout="@layout/layout_detail_progress_bar" />

            <LinearLayout
                android:id="@+id/detail_container"
                style="@style/Match.Width"
                android:paddingBottom="@dimen/spacing_large"
                android:visibility="gone"
                tools:visibility="visible">

                <include layout="@layout/layout_detail_ratings" />

                <LinearLayout
                    style="@style/Match.Width"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/first_keyline"
                    android:paddingStart="@dimen/first_keyline"
                    android:paddingTop="@dimen/spacing_large">

                    <include layout="@layout/layout_detail_overview" />

                    <com.ashish.movies.ui.widget.FontTextView
                        style="@style/PrimaryText.Title"
                        android:text="@string/season_title" />

                    <com.ashish.movies.ui.widget.FontTextView
                        android:id="@+id/season_num_text"
                        style="@style/SecondaryText.Title" />

                    <com.ashish.movies.ui.widget.FontTextView
                        style="@style/PrimaryText.Title"
                        android:text="@string/episode_title" />

                    <com.ashish.movies.ui.widget.FontTextView
                        android:id="@+id/episode_num_text"
                        style="@style/SecondaryText.Title" />

                    <com.ashish.movies.ui.widget.FontTextView
                        style="@style/PrimaryText.Title"
                        android:text="@string/air_date_title" />

                    <com.ashish.movies.ui.widget.FontTextView
                        android:id="@+id/air_date_text"
                        style="@style/SecondaryText.Title" />

                </LinearLayout>

                <include layout="@layout/layout_detail_cast_credits_view_stub" />

                <include layout="@layout/layout_detail_crew_credits_view_stub" />

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>